--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "breaking-bad-app",
   "version": "0.0.1",
+  "engines": {
+    "node": "12.16.x"
+  },
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,15 +27,17 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.2.0",
+    "body-parser": "^1.19.0",
     "cordova-android": "8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
+    "zone.js": "~0.9.1",
     "@angular-devkit/build-angular": "~0.803.20",
     "@angular/cli": "8.3.26",
     "@angular/compiler": "~8.2.14",
@@ -61,6 +66,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
+  },
+  "devDependencies": {
+    
   },
   "description": "An Ionic project",
   "cordova": {
