--- a/package.json
+++ b/package.json
@@ -67,9 +67,7 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "devDependencies": {
-    
-  },
+  "devDependencies": {},
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
