--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular/cli": "8.3.26",
     "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/compiler-cli": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
@@ -26,35 +31,26 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
-    "@ionic/storage": "^2.2.0",
-    "body-parser": "^1.19.0",
-    "cordova-android": "8.1.0",
-    "cordova-browser": "^6.0.0",
-    "cordova-sqlite-storage": "^5.0.0",
-    "core-js": "^2.5.4",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "8.3.26",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
     "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/storage": "^2.2.0",
     "@types/core-js": "^2.5.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "body-parser": "^1.19.0",
     "codelyzer": "^5.0.0",
+    "cordova-android": "^8.1.0",
+    "cordova-browser": "^6.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^5.0.0",
+    "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -62,10 +58,14 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "morgan": "^1.10.0",
     "protractor": "~5.4.0",
+    "rxjs": "~6.5.1",
     "ts-node": "~7.0.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {},
   "description": "An Ionic project",
@@ -82,8 +82,8 @@
       "cordova-sqlite-storage": {}
     },
     "platforms": [
-      "android",
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
