--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@capacitor/android": "^2.1.0",
+    "@capacitor/core": "2.1.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -67,7 +69,9 @@
     "typescript": "~3.4.3",
     "zone.js": "~0.9.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@capacitor/cli": "2.1.0"
+  },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
