--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/pwa-elements": "^1.5.2",
     "@ionic/storage": "^2.2.0",
     "@types/core-js": "^2.5.3",
     "@types/jasmine": "~3.3.8",
